tests/bad/var_invalid_type.ae
/// fail: Invalid variable type

def main() {
    let x: Foo
}